--- a/assets/sha-iarc-style.css
+++ b/assets/sha-iarc-style.css
@@ -53,7 +53,7 @@
 
 .dropzone-area {
     width: 80%;
-    height: 130px;
+    height: 100px;
     position: relative;
     border: 2px dashed #CBCBCB;
     background: rgb(245, 238, 138);
@@ -61,6 +61,14 @@
 }
 .dropzone-area:hover {
     border: 2px dashed #2E94C4;
+}
+
+.paste-area {
+    width: 80%;
+    height: 30px;
+    position: relative;
+    border: 1px solid #000;
+    margin: 0 auto;
 }
 
 .dropzone-area input {
@@ -73,6 +81,16 @@
     width: 100%;
     height: 100%;
     opacity: 0;
+}
+
+.paste-area input {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 .dropzone-button {
     position: absolute;
@@ -102,7 +120,7 @@
     border-radius: 3px;
     padding: 15px;
     position: fixed;
-    z-index: 999;
+    z-index: 9999;
     left: 50%;
     bottom: 30px;
   }
